# PriceAIFB-Dev

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements.in  requirements.txt  test_api.py
.github/workflows/: ci.yml
market_scout/: __init__.py
market_scout/adapters/: __init__.py  llm.py
market_scout/api/: __init__.py
market_scout/config/: __init__.py
market_scout/models/: __init__.py
market_scout/scrapers/: __init__.py  base.py  facebook.py  yad2.py
market_scout/utils/: __init__.py  database.py
src/: __init__.py
src/app/: __init__.py
src/app/core/: __init__.py  config.py  logging.py
src/app/pipelines/: run.py
src/app/services/: scoring.py
tests/: __init__.py  conftest.py  test_llm_adapter_integration.py  test_llm_adapter_unit.py  test_scoring.py
tests/unit/: test_api.py  test_utils.py
